# agentpet-linux

./: .gitignore  Cargo.toml  README.md  install.sh  uninstall.sh
.claude/agent-memory/code-reviewer/: MEMORY.md  project_conventions.md
.github/workflows/: deploy-pages.yml  release.yml
assets/: agentpet.desktop  io.github.tranhuuhuy297.agentpet.desktop
crates/agentpet/: Cargo.toml
crates/agentpet-core/: Cargo.toml
crates/agentpet-core/src/: catalog.rs  chat.rs  config.rs  event.rs  hooks.rs  ipc.rs  lib.rs  mapper.rs  mood.rs  payloads.rs  session.rs  sprite.rs  state.rs
crates/agentpet/src/: main.rs  notify.rs  petdex.rs  snapshot.rs
crates/agentpet/src/cli/: hook.rs  mod.rs  run.rs  uninstall.rs
crates/agentpet/src/daemon/: mod.rs  single_instance.rs
crates/agentpet/src/gui/: mod.rs
crates/agentpet/src/pet/: caption.rs  mod.rs
crates/agentpet/src/platform/: autostart.rs  mod.rs  update.rs
crates/agentpet/src/ui/: mod.rs  monitor.rs  settings.rs  tray.rs  window_icon.rs
crates/agentpet/src/ui/settings/: about.rs  chat_page.rs  general.rs  mod.rs  pet_page.rs  style.rs
crates/pet-spike/: Cargo.toml
crates/pet-spike/src/: main.rs
docs/: index.html  project-changelog.md  system-architecture.md
docs/journals/: 20260609-landing-page-steps-timeline.md  20260612-chat-speech-bubbles-implementation.md
plans/20260609-pet-size-setting/: plan.md
plans/260609-1656-pet-waiting-session-list/: brainstorm-summary.md  phase-01-mood-priority.md  phase-02-data-plumbing.md  phase-03-pet-render.md  phase-04-tests-verify.md  plan.md
plans/260612-0950-feature-roadmap/: phase-01-chat-speech-bubbles.md  phase-02-custom-notification-sounds.md  phase-03-mood-animation-binding-editor.md  phase-04-first-run-onboarding.md  phase-10-actionable-monitor-session-rows.md  phase-11-live-tool-activity-display.md  phase-12-session-history-daily-stats.md  phase-13-monitor-empty-state.md  phase-14-more-agent-presets.md  phase-15-per-agent-notification-toggles.md  phase-16-tray-count-toggle.md  phase-17-in-app-update-check.md  plan.md
plans/reports/: pm-260612-phase-01-chat-speech-bubbles.md  tester-2026-06-12-build-validation.md
scripts/: build-appimage.sh  e2e-ipc.sh  run-pet-spike.sh
