[package]
name = "agentpet-core"
version = "0.4.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure, GTK-free domain logic for AgentPet on Linux (state, sessions, hooks, IPC, sprites)."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Spritesheet decode/slice. Petdex packs ship webp; PNG kept for local packs.
image = { version = "0.25", default-features = false, features = ["png", "webp"] }

[dev-dependencies]
tempfile = "3"
