[package]
name = "agentpet"
version = "0.5.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AgentPet for Linux — monitor multiple AI coding agents with a tray monitor and desktop pet."

[[bin]]
name = "agentpet"
path = "src/main.rs"

[dependencies]
agentpet-core = { path = "../agentpet-core" }
# Async Unix-socket server for the daemon. The GTK/tray/pet layers are added in
# later phases; this crate stays GTK-free until then so it builds with no system
# deps beyond libc.
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "macros"] }
# SIG_IGN for the run-wrapper so the child owns the terminal signals.
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Desktop notifications over org.freedesktop.Notifications (pure-Rust zbus).
notify-rust = "4"
# GUI: GTK4 windows + the floating pet (via XWayland, per the Phase-0 spike).
gtk4 = { version = "0.9", features = ["v4_6"] }
gdk4-x11 = "0.9"
x11rb = { version = "0.13", features = ["shape"] }
# StatusNotifierItem tray (needs the GNOME AppIndicator extension at runtime).
# 0.3 uses pure-Rust zbus (no system libdbus-1-dev); `blocking` gives a sync API.
ksni = { version = "0.3", features = ["blocking"] }
# Bridge socket-server events from the tokio thread to the GTK main thread.
async-channel = "2"
# Decode pet spritesheets (Petdex packs ship WebP; PNG for the tray badge).
# Both decoders are pure-Rust, so the build stays self-contained.
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
# `agentpet update` — self-update from GitHub Releases (rustls, no OpenSSL).
self_update = { version = "0.41", default-features = false, features = ["rustls", "archive-tar", "compression-flate2"] }

[dev-dependencies]
tempfile = "3"
