[package]
name = "agentpet-pet-spike"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Phase-0 feasibility spike: a borderless, always-on-top, click-through, transparent GTK4 pet window under XWayland (the project's riskiest unknown)."

[[bin]]
name = "pet-spike"
path = "src/main.rs"

# NOTE: requires system GTK4 dev packages — builds only after:
#   sudo apt install -y libgtk-4-dev build-essential pkg-config libx11-dev libxcb1-dev
[dependencies]
gtk4 = { version = "0.9", features = ["v4_6"] }
gdk4-x11 = "0.9"
x11rb = "0.13"
